<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kyoda.myapplication.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <GridLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:columnCount="5"
        android:rowCount="5"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_row="0"
            android:gravity="center|end"
            android:text="0"
            android:padding="2dp"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_row="1"
            android:textSize="18sp"
            android:text="7" />


        <Button
            android:id="@+id/button8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="1"
            android:textSize="18sp"
            android:text="8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="1"
            android:textSize="18sp"
            android:text="9" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="1"
            android:textSize="18sp"
            android:text="÷" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="4"
            android:layout_row="1"
            android:textSize="18sp"
            android:text="C" />


        <Button
            android:id="@+id/button4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_row="2"
            android:textSize="18sp"
            android:text="4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="2"
            android:textSize="18sp"
            android:text="5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="2"
            android:textSize="18sp"
            android:text="6" />

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="2"
            android:textSize="18sp"
            android:text="x" />


        <Button
            android:id="@+id/buttonCE"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="4"
            android:layout_row="2"
            android:textSize="18sp"
            android:text="CE" />


        <Button
            android:id="@+id/button1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_row="3"
            android:textSize="18sp"
            android:text="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="3"
            android:textSize="18sp"
            android:text="2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="3"
            android:textSize="18sp"
            android:text="3" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="3"
            android:textSize="18sp"
            android:text="-" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="4"
            android:layout_row="3"
            android:textSize="18sp"
            android:text="." />

        <Button
            android:id="@+id/button0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_row="4"
            android:textSize="18sp"
            android:text="0" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="4"
            android:textSize="18sp"
            android:text="=" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="4"
            android:textSize="18sp"
            android:text="+" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="4"
            android:layout_row="4"
            android:textSize="18sp"
            android:text="+/-" />



    </GridLayout>
</android.support.constraint.ConstraintLayout>
